# ComputerSimulator

./: CMakeLists.txt
include/: cpu.h  disk.h  gpu.h  kbd.h  ram.h
src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
